--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 10px 100px;
+  justify-content: center;
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.switch_button {
+  margin-top: -50px;
+  position: absolute;
+  right: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.no_view {
+  display: none;
+}
+
+
+/* 
+Container-card */
+
+.container_cards {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 120px;
+  min-width: 100%;
+}
+
+.card {
+  position: relative;
   display: flex;
   flex-direction: column;
+  width: 300px;
+  height: 300px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-position: center;
+  background-size: contain;
+  box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  margin-top: 20px;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.color {
+  margin-top: 5px;
+  font-size: 20px;
+  color: #333;
+  opacity: 0.6;
+}
+
+.add-bucket {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  justify-content: space-around;
+  bottom: 20px;
+  color: red;
+  font-size: 20px;
+  align-items: center;
+}
+
+.bth {
+  padding: 7px 13px;
+  border: 1px solid red;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.bth:hover {
+  background: red;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* Container-list */
+
+.container-list {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  min-width: 100vw;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  margin-top: 5px;
+  width: 80%;
+  background: #f5f5f5;
+  height: 100px;
+}
+
+.image-list {
+  display: flex;
+  width: 100px;
+  height: 100px;
+}
+
+.image-list img {
+  object-fit: contain;
+}
+
+.title-list {
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.color-list {
+  margin-top: 5px;
+  font-size: 20px;
+  color: #333;
+  opacity: 0.6;
+}
+
+.add-bucket-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  color: red;
+  font-size: 20px;
+  align-items: center;
 }
